# neovide-plugin

./: Cargo.toml  README.md
src/: lib.rs
