[package]
name = "neovide-plugin"
version = "0.1.0"
authors = ["Jack Frost <j4qfrost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { git = "https://github.com/aclysma/skulpin", features = ["skulpin_winit"] }